apps/media-services/starr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: starr
  labels:
    name: starr
