apps/media-services/starr/bazarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr-ingress
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - home.brettswift.com
    secretName: home-brettswift-com-tls
  rules:
  - host: home.brettswift.com
    http:
      paths:
      - path: /bazarr
        pathType: Prefix
        backend:
          service:
            name: bazarr
            port:
              number: 6767
