apps/media-services/starr/lidarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr-ingress
  namespace: starr
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - home.brettswift.com
    secretName: home-brettswift-com-tls
  rules:
  - host: home.brettswift.com
    http:
      paths:
      - path: /lidarr
        pathType: Prefix
        backend:
          service:
            name: lidarr
            port:
              number: 8686
