apps/media-services/starr/sabnzbd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd-ingress
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-Proto $scheme;
      proxy_set_header X-Forwarded-Host $host;
      proxy_set_header X-Forwarded-Port $server_port;
      proxy_set_header X-Forwarded-Prefix /sabnzbd;
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
      if ($request_uri = /sabnzbd) { return 308 /sabnzbd/; }
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - home.brettswift.com
    secretName: home-brettswift-com-tls
  rules:
  - host: home.brettswift.com
    http:
      paths:
      - path: /sabnzbd(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: sabnzbd
            port:
              number: 8080
